don't prevent keyboard on mobile

--- a/style/app.css
+++ b/style/app.css
@@ -32,13 +32,11 @@ html, body {
 }
 
 *, *:focus {
-  -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  outline-style:none;/*IE*/
 }
 
 body > h1 {
